--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Document</title>
 </head>
 <body>
+
+    <div>
+        <select>
+            <option value="0" selected="selected">Hello</option>
+            <option value="1">My</option>
+            <option value="3">Friend</option>
+        </select>
+    </div>
     
 </body>
 </html>
